# valor-api-template

./: .dockerignore  Cargo.toml  Containerfile  Makefile  README.md  plugins.json
plugins/hello/: Cargo.toml
